--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <p>Meu nome é Lúcio, sou um pesquisador da ██████████. O trabalho dessa agência é simples, estudar e comercializar as aclamadas Frutas do Diabo. Durante meu período nessa agência, eu realizei uma pesquisa secundária de minha própria índole, para descobrir algo que desejo saber a muito tempo: o sentido da vida. E após meses de pesquisa, eu finalmente cheguei a uma conclusão. A natureza encoraja a simplicidade em seu cerne, quanto mais complexo um sistema é, mais energia, mais materiais são gastos a toa, gastos sem sentido. E a humanidade, durante seus primórdios, era simples, mas conforme a humanidade foi crescendo e evoluindo, essa simplicidade se tornou complexidade, e o sentido que antes ali existia,  não existe mais. No mundo em que vivemos hoje, viver não faz sentido. Entretanto, eu conheço um método de escapar dessa realidade, uma fruta que temos em estoque e muitos consideram ela inútil, é minha chave para escapar deste inferno. E ao contrário de Adão e Eva, que foram expulsos do Paraíso, após terem comido a fruta proíbida, esta fruta me levará de volta para ele.</p>
         </div>
         </details>
-        <p>Após o incidente, a fruta, agora revelada como Lúcio, foi guardada e mantida em cima de uma mesa. A mesma se manteve em um estado dormente, por dias, até eventualmente decidirem analisar a mesma. Eventualmente, após uma análise em laboratório, descobertas sobre a fruta foram feitas, que dialogaram sobre tais descobertas em voz alta na mesma sala cujo a fruta estava. A seguir, a transcrição da conversa</p>
+        <p>Após o incidente, a fruta, agora revelada como Lúcio, foi guardada e mantida em cima de uma mesa. A mesma se manteve em um estado dormente, por dias, até eventualmente decidirem analisar a mesma. Eventualmente, após uma análise em laboratório, descobertas sobre a fruta foram feitas, que dois pesquisadores dialogaram sobre em voz alta na mesma sala cujo a fruta estava. A seguir, a transcrição da conversa</p>
                  <details class="spoiler" style="--oculto: texto oculto">
         <summary>
             transcrição do diálogo
@@ -62,4 +62,5 @@
     });
 </script>
 </body>
+
 </html>  
